bk_ida/gccida/g2/recog_for_combine
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_for_combine/src/combine.c:10228:9: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
frees = undobuf_0.frees; 
        ^~~~~~~~~
        undobuf
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_for_combine/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_for_combine/src/combine.c:10229:6: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
if ( undobuf_0.frees ) 
     ^~~~~~~~~
     undobuf
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_for_combine/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_for_combine/src/combine.c:10230:1: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
undobuf_0.frees = undobuf_0.frees->next; 
^~~~~~~~~
undobuf
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_for_combine/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_for_combine/src/combine.c:10230:19: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
undobuf_0.frees = undobuf_0.frees->next; 
                  ^~~~~~~~~
                  undobuf
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_for_combine/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_for_combine/src/combine.c:10233:9: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
undos = undobuf_0.undos; 
        ^~~~~~~~~
        undobuf
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_for_combine/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_for_combine/src/combine.c:10239:1: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
undobuf_0.undos = frees; 
^~~~~~~~~
undobuf
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_for_combine/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_for_combine/src/combine.c:10302:1: error: use of undeclared identifier 'reg_dead_regno'
reg_dead_regno = v20; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_for_combine/src/combine.c:10306:1: error: use of undeclared identifier 'reg_dead_flag'
reg_dead_flag = 0; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_for_combine/src/combine.c:10307:1: error: use of undeclared identifier 'reg_dead_endregno'
reg_dead_endregno = v20 + 1; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_for_combine/src/combine.c:10330:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v25 = ( ( unsigned int)( mode_class_0[v21] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_for_combine/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_for_combine/src/combine.c:10349:1: error: use of undeclared identifier 'reg_dead_flag'
reg_dead_flag = 0; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_for_combine/src/combine.c:10351:1: error: use of undeclared identifier 'reg_dead_endregno'
reg_dead_endregno = v20 + v25; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_for_combine/src/combine.c:10378:28: error: use of undeclared identifier 'reg_dead_endregno'
if ( ( unsigned int)v20 >= reg_dead_endregno ) 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_for_combine/src/combine.c:10388:7: error: use of undeclared identifier 'reg_dead_flag'; did you mean 'reg_dead_at_p'?
v29 = reg_dead_flag; 
      ^~~~~~~~~~~~~
      reg_dead_at_p
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_for_combine/src/combine.c:400:12: note: 'reg_dead_at_p' declared here
static int reg_dead_at_p        PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_for_combine/src/combine.c:10389:6: error: use of undeclared identifier 'reg_dead_flag'; did you mean 'reg_dead_at_p'?
if ( reg_dead_flag ) 
     ^~~~~~~~~~~~~
     reg_dead_at_p
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_for_combine/src/combine.c:400:12: note: 'reg_dead_at_p' declared here
static int reg_dead_at_p        PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_for_combine/src/combine.c:10391:6: error: use of undeclared identifier 'reg_dead_flag'; did you mean 'reg_dead_at_p'?
if ( reg_dead_flag != 1 ) 
     ^~~~~~~~~~~~~
     reg_dead_at_p
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_for_combine/src/combine.c:400:12: note: 'reg_dead_at_p' declared here
static int reg_dead_at_p        PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_for_combine/src/combine.c:10395:47: error: use of undeclared identifier 'reg_dead_regno'; did you mean 'reg_dead_at_p'?
if ( find_regno_note( nonnote_insn, REG_DEAD, reg_dead_regno) ) 
                                              ^~~~~~~~~~~~~~
                                              reg_dead_at_p
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_for_combine/src/combine.c:400:12: note: 'reg_dead_at_p' declared here
static int reg_dead_at_p        PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_for_combine/src/combine.c:10410:7: error: use of undeclared identifier 'reg_dead_endregno'
v27 = reg_dead_endregno; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_for_combine/src/combine.c:10411:17: error: use of undeclared identifier 'reg_dead_regno'; did you mean 'reg_dead_at_p'?
LODWORD( v20) = reg_dead_regno; 
                ^~~~~~~~~~~~~~
                reg_dead_at_p
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_for_combine/src/combine.c:400:12: note: 'reg_dead_at_p' declared here
static int reg_dead_at_p        PARAMS ((rtx, rtx));
           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_for_combine/src/obj/combine.o] Error 1
